[package]
edition = "2018"
name = "node-sys"
version = "0.1.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/interfaces-rs/node-sys"
description = """
Raw bindings to the Node.js API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
serde = "^1.0.102"

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.web-sys]
version = "^0.3.32"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["serde-serialize", "strict-macro"]

[dev-dependencies]
wasm-bindgen-futures = "^0.4.1"
wasm-bindgen-test = "^0.3.5"

[patch.crates-io.node-sys]
path = "."
